[gd_scene load_steps=3 format=3 uid="uid://b8axwlrq13bij"]

[ext_resource type="Theme" uid="uid://do2ed37wbrkem" path="res://theme.tres" id="1_ig7tw"]
[ext_resource type="Script" uid="uid://ckhkse3w33pyw" path="res://stitch_manager.gd" id="2_0xm2m"]

[node name="PanelContainer" type="PanelContainer" node_paths=PackedStringArray("row_label", "stitch_label")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ig7tw")
script = ExtResource("2_0xm2m")
row_label = NodePath("MarginContainer/VBoxContainer/RowLabel")
stitch_label = NodePath("MarginContainer/VBoxContainer/VBoxContainer/CurrentStitch")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Row" type="LineEdit" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
placeholder_text = "Row notation"

[node name="RowLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Row"

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="StitchState" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 36

[node name="CurrentStitch" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 64
text = "Current Stitch"
horizontal_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 36

[node name="Back" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/CenterContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "  -  "

[node name="Forward" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/CenterContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 92
text = "  +  "

[connection signal="text_submitted" from="MarginContainer/VBoxContainer/Row" to="." method="update_row"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/CenterContainer/HBoxContainer/Back" to="." method="prev_stitch"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/CenterContainer/HBoxContainer/Forward" to="." method="next_stitch"]
